--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my_namaste_react",
   "version": "1.0.0",
   "description": "This is namaste react by Akshay saini",
-  
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -27,6 +26,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   }
 }
